name:                eval
version:             2.0
synopsis:            example shared library for C use
-- description:         
license:             BSD3
-- license-file:        LICENSE
author:              Albert Lai
-- maintainer:          
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=2.0

foreign-library Eval
  type:                native-shared
  lib-version-info:    2:0:0
  -- if os(Windows)
  --   options: standalone
  --   mod-def-file: Eval.def
  other-modules:       Eval
  c-sources:           hsbracket.c
  build-depends:       base >= 4.8
  default-language:    Haskell2010
